--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -1,3 +1,3 @@
-<link rel="stylesheet" media="all" href="/spectre.min.css" />
-<link rel="stylesheet" media="all" href="/spectre-icons.min.css" />
-<link rel="stylesheet" media="all" href="/spectre-exp.min.css" />
+<link rel="stylesheet" media="all" href="spectre.min.css" />
+<link rel="stylesheet" media="all" href="spectre-icons.min.css" />
+<link rel="stylesheet" media="all" href="spectre-exp.min.css" />
